--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Cameron Bytheway <cameron@nujii.com>",
   "readmeFilename": "README.md",
   "engines": {
-    "node": "0.8.x"
+    "node": "0.8.x",
+    "npm": "1.x.x"
   },
   "dependencies": {
     "stack-angular": "~0.0.1",
