--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "stack-angular": "~0.0.1",
-    "startup": "~0.0.1",
-    "express": "~3.0.6"
+    "startup": "~0.1.0",
+    "simple-stack-common": "~0.1.3"
   },
   "devDependencies": {
     "should": "~1.2.1",
