--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "startup": "~0.1.0",
-    "simple-stack-common": "~0.1.3"
+    "simple-stack-common": "~0.1.3",
+    "component": "~0.13.2"
   },
   "devDependencies": {
     "should": "~1.2.1",
