--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "startup": "~0.1.0",
     "simple-stack-common": "~0.1.3",
-    "component": "~0.13.2"
+    "component": "~0.13.2",
+    "nghtml": "https://github.com/CamShaft/nghtml"
   },
   "devDependencies": {
     "should": "~1.2.1",
