--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "startup": "~0.1.0",
     "simple-stack-common": "~0.1.3",
     "component": "~0.13.2",
-    "nghtml": "https://github.com/CamShaft/nghtml"
+    "nghtml": "CamShaft/nghtml"
   },
   "devDependencies": {
     "should": "~1.2.1",
