--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "startup": "~0.1.0",
     "component": "~0.16.2",
     "simple-stack-common": "~0.1.3",
-    "nghtml": "CamShaft/nghtml"
+    "nghtml": "CamShaft/nghtml",
+    "passport": "~0.1.17",
+    "passport-flokk": "flokk/passport-flokk",
+    "envs": "~0.1.0"
   },
   "devDependencies": {
     "should": "~1.2.1",
