--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "startup": "~0.1.0",
-    "component": "~0.16.2",
+    "component": "0.16.4",
     "simple-stack-common": "~0.1.3",
     "nghtml": "CamShaft/nghtml",
     "passport": "~0.1.17",
