--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "nghtml": "CamShaft/nghtml",
     "envs": "~0.1.0",
     "flokk-angular": "git+https://github.com/CamShaft/flokk-angular",
-    "theme-origami": "flokk/theme-origami"
+    "theme-origami": "flokk/theme-origami",
+    "simple-assets": "~0.1.0",
+    "uglify-js": "~2.3.6",
+    "styl": "~0.2.3"
   },
   "devDependencies": {
     "should": "~1.2.1",
