--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "theme-origami": "flokk/theme-origami",
     "simple-assets": "~0.1.0",
     "uglify-js": "~2.3.6",
-    "styl": "~0.2.3"
+    "styl": "CamShaft/styl"
   },
   "devDependencies": {
     "should": "~1.2.1",
