Fix the stylus plugin

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "simple-assets": "~0.1.0",
     "uglify-js": "~2.3.6",
     "styl": "CamShaft/styl",
-    "component-stylus-plugin": "~0.2.3"
+    "component-builder": "~0.8.3",
+    "component-stylus": "~1.1.3"
   },
   "devDependencies": {
     "should": "~1.2.1",
