--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "uglify-js": "~2.3.6",
     "component-builder": "~0.8.3",
     "component-stylus": "~1.1.3",
-    "clean-css": "~1.0.12"
+    "clean-css": "~1.0.12",
+    "jshint": "~2.1.11"
   },
   "devDependencies": {
     "should": "~1.2.1",
